# apex-scoring-broadcast

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
local/: Cargo.toml
local/mock/: Cargo.toml  d.json  filter.js  out.json
local/mock/src/: main.rs
local/src/: file_reader.rs  main.rs  ui.rs  ws_handler.rs
server/: index.js  package-lock.json  package.json  test_sql.js
server/config/: const.js
server/connectors/: redis.js
server/migrations/: 20230102063514_players.js  20230117010222_livedata.js  20230121200354_livedata2.js  20230125042244_respawn_to_statscode.js  20230128010310_livedata3.js  20230202012424_player_names.js  20230202050341_lower_character_names.js  20230203033403_add_match_to_player_teams.js  20230203042334_player_match_view.js  20230216161046_refactor_settings.js  20230223054708_add_default_match_to_org.js  20230303215731_add_date_to_livedata.js  20230308190504_add_default_observer.js  20230403002918_add_client_to_livedata.js  20230403003117_increase_skin_length.js  20230405040045_add_custom_teams.js  20230405054515_selected_match_to_id.js  20230405063400_match_settings_to_id.js  20230518203423_drop-spots.js  20230608215509_auto_poll_stats.js
server/mock/: eastats2.json  eastats3.json  eastats5.json  randomteams.json
server/routes/: router.js
server/services/: apex.service.js  auth.service.js  broadcast.service.js  cache.service.js  drops.service.js  live.service.js  match.service.js  (+4 more)
(+93 files in other folders)
