[package]
name = "local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linemux="0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
notify = "4.0.17"
tokio-tungstenite = "0.18.0"
url = "2.3.1"
